# chatbot_poc

./: .gitignore  README.md  pyproject.toml  test_import.py
rag/: config.py  main.py
rag/api/: endpoints.py
rag/models/: document.py
rag/services/: data_capture.py  embedding.py  qa.py
